# clava

./: .clavarc.json  .eslintrc  .gitignore  .mocharc.json  .project  CMakeCache.txt  Clava Parser Restructuring.xlsx  CxxWeaver.json  LICENSE  Makefile  README.md  clava.code-workspace  cmake_install.cmake  deps.cmake  deps_config.cmake  eclipse.build  jest.config.json  package-lock.json  package.json  tsconfig.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ant-clava-js.yml  ant-lara-2.0-legacy.yml  ant-main.yml  ant-staging.yml  ant.yml  codeql.yml  copilot-setup-steps.yml  gradle.yml  gradle.yml_  main.yml  nightly.yml  staging.yml
AntarexClavaApi/: .classpath  .project  build.gradle  settings.gradle
CMake/: ApplyLARA.cmake  ClavaConfig.cmake  ClavaHdf5Config.cmake  ClavaUtilConfig.cmake  ClavaUtils.cmake  FindClava.cmake  README.md
CMake/clava/: ClavaGenerate.cmake  ClavaWeave.CMakeLists.txt  ClavaWeave.cmake
CMake/hdf5/: ClavaHdf5.cmake
CMake/util/: ApplyAutopar.lara  ApplyHdf5.lara  ClavaAutopar.cmake  ClavaHdf5.cmake
ClangAstDumper/: .gitignore  CMakeLists.txt  ChildrenVisitorAttrs.cpp  ChildrenVisitorDecls.cpp  ChildrenVisitorExtras.cpp  ChildrenVisitorStmts.cpp  ChildrenVisitorTypes.cpp  ClangAst.cpp  ClangAst.h  ClangAstDumper.cpp  ClangAstDumper.h  ClangAstDumperConstants.h  ClangAstDumperDecls.cpp  ClangAstDumperDeclsInfo.cpp  ClangAstDumperExprs.cpp  ClangAstDumperExtra.cpp  ClangAstDumperStmts.cpp  ClangAstDumperTypes.cpp  ClangEnums.cpp  ClangEnums.h  ClangEnums_3_8_1.cpp  ClangNodes.cpp  ClangNodes.h  ClangastDumperAttr.cpp  ClavaConstants.cpp  ClavaConstants.h  ClavaDataDumper.cpp  ClavaDataDumper.h  ClavaDataDumperAttrs.cpp  ClavaDataDumperDecls.cpp  ClavaDataDumperStmts.cpp  ClavaDataDumperTypes.cpp  ClavaDecl.cpp  ClavaDecl.h  InfoDumper.cpp  InfoDumper.h  InfoDumperConstants.h  InfoDumperDecls.cpp  README.md  enums_AttrKinds_h.cpp  (+11 more)
ClangAstDumper/clang_enums/: .gitignore  CMakeLists.txt  ClangEnum.js  ClangEnum.lara  ClangEnums.js  ClangEnums.lara  ClangEnumsGenerator.lara  ExtractEnums.cmake  Extractors.js  HeaderEnums.js  HeaderEnums.lara  Main.js  Main.mjs  config.clava  enums_Type_h.cpp
ClangAstDumper/src/: ChildrenVisitorAttrs.cpp  ChildrenVisitorExtras.cpp  ChildrenVisitorTypes.cpp  ClangAst.cpp  ClangAst.h  ClangAstDumperAttr.cpp  ClangAstDumperConstants.h  ClangAstDumperDecls.cpp  ClangAstDumperExprs.cpp  ClangAstDumperStmts.cpp  ClangNodes.cpp  ClavaDataDumper.h  ClavaDataDumperAttrs.cpp  ClavaDataDumperTypes.cpp  ClavaDecl.cpp  ClavaDecl.h  TypeMarker.cpp  TypeMarker.h  enums_AttrKinds_h.cpp  enums_Decl_h.cpp  enums_ExceptionSpecificationType_h.cpp  enums_ExprCXX_h.cpp  enums_Expr_h.cpp  enums_Linkage_h.cpp  enums_OperationKinds_h.cpp  enums_Specifiers_h.cpp  enums_TemplateBase_h.cpp  enums_TemplateName_h.cpp  enums_TypeTraits_h.cpp  enums_Visibility_h.cpp  main.cpp  newmain.cpp  plugin.cpp  standalone.cpp  tool.cpp
ClangAstDumper/src/ChildrenVisitor/: ChildrenVisitorAttrs.cpp  ChildrenVisitorDecls.cpp  ChildrenVisitorExtras.cpp  ChildrenVisitorStmts.cpp  ChildrenVisitorTypes.cpp
ClangAstDumper/src/Clang/: ClangAst.cpp  ClangAst.h  ClangNodes.cpp  ClangNodes.h
ClangAstDumper/src/ClangAstDumper/: ClangAstDumper.cpp  ClangAstDumper.h  ClangAstDumperAttr.cpp  ClangAstDumperConstants.h  ClangAstDumperDecls.cpp  ClangAstDumperExprs.cpp  ClangAstDumperExtra.cpp  ClangAstDumperStmts.cpp  ClangAstDumperTypes.cpp
ClangAstDumper/src/ClangEnums/: ClangEnums.cpp  ClangEnums.h
ClangAstDumper/src/Clava/: ClavaConstants.cpp  ClavaConstants.h  ClavaDecl.cpp  ClavaDecl.h
ClangAstDumper/src/ClavaDataDumper/: ClavaDataDumper.cpp  ClavaDataDumper.h  ClavaDataDumperAttrs.cpp  ClavaDataDumperDecls.cpp  ClavaDataDumperStmts.cpp  ClavaDataDumperTypes.cpp
ClangAstDumper/src/TypeMarker/: TypeMarker.cpp  TypeMarker.h
ClangAstDumper/testSources/: foo.cpp  foo.h  main.cpp
ClangAstParser/: .classpath  .gitignore  .project  ClangAst Notes  Nodes Todo.xlsx  Type Parsing.txt  Wishlist.txt  build.gradle  ivy.xml  settings.gradle
ClangAstParser/run/: ClangAst-run.launch  ClavaSandbox-luisreis.launch  ClavaSandbox.launch
Clava-JS/: .eslintrc  .gitignore  CxxWeaver.json  README.md  bunfig.toml  clava.json  eslint.config.js  jest.config.js  package.json  publish_clava.ps1  tsconfig.jest.json  tsconfig.json  typedoc.config.js  typedoc.json
Clava-JS/api/: Issues.test.ts  Joinpoints.ts  LegacyIntegrationTests - C.test.ts  LegacyIntegrationTests - CXX.test.ts  LegacyIntegrationTests - Issues.test.ts  Query.test.ts
Clava-JS/bun/: ClavaLegacyTester.ts  preload.ts
ClavaAst/: .classpath  .project  build.gradle  ivy.xml  settings.gradle
ClavaHls/: .classpath  .project  build.gradle  ivy.xml  settings.gradle
ClavaLaraApi/: .classpath  .project  build.gradle  ivy.xml  settings.gradle
ClavaLaraExtraApi/: .classpath  .project
ClavaOptionsManager/: build.gradle  settings.gradle
ClavaTester/: .classpath  .project  ivy.xml
ClavaViewer/: .classpath  .project  ivy.xml
ClavaWeaver/: .classpath  .gitignore  .ignore  .project  README.md  build.gradle  clava_join_point_hierarchy.txt  clava_weaver.build  eclipse.build  ivy.xml  settings.gradle
ClavaWeaverSpecs/: build.gradle  settings.gradle
ClavaWrapper/: CMakeLists.txt  main.cpp
TranslationUnitErrorDumper/: CMakeCache.txt  CMakeLists.txt  DiagnosticAction.cpp  DiagnosticAction.h  DiagnosticConsumer.cpp  DiagnosticConsumer.h  Makefile  TranslationUnitErrorDumper.cbp  a.cpp  cmake_install.cmake  compile_commands.json  main.cpp  test.cpp
TranslationUnitPatcher/: .classpath  .project  README.md  build.gradle  eclipse.build  ivy.xml  settings.gradle
docs/: Clava Parser Restructuring.xlsx  common_issues.md
src/: ChildProcessHandling.ts  Clava.ts  ClavaLauncher.ts  FileExtensions.ts  Sandbox.test.ts  Sandbox.ts  index.ts
src-api/: Joinpoints.ts  jest.config.json
src-code/: Sandbox.test.ts  Sandbox.ts  WeaverConfiguration.ts  index.ts  jest.config.json
test/: CMakeLists.txt  ChildProcessHandling.spec.ts  FileExtensions.spec.ts  Sandbox.spec.ts  index.spec.ts  test.cpp
(+3779 files in other folders)
